// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductItem /> check how renders should NOT render buyer quantity, condition and should render default photo and price without decimals 1`] = `
<DocumentFragment>
  <a
    data-testid="ProductItem"
  >
    <div
      class="sc-bdfBwQ dXFlzG sc-gsTCUz vzdrx"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <div
        class="sc-bdfBwQ gEWXUp sc-hKgILt iGwkBA"
        data-testid="ProductThumbnail"
        direction="row"
        height="15"
        spacing=""
        width="13"
        wrap="nowrap"
      >
        <img
          alt="product1"
          data-testid="ProductThumbnail-img"
          src="no-photo.png"
        />
      </div>
      <div
        class="sc-bdfBwQ jPnCyv"
        direction="column"
        spacing=""
        width="100%"
        wrap="nowrap"
      >
        <span
          class="sc-dlfnbm LDMTW"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          product1
        </span>
        <span
          class="sc-dlfnbm cQEZxx"
          color=""
          data-testid="ProductItem-price"
          display="inline-block"
          overflow="visible"
          size="5"
          spacing="0px"
          transform=""
        >
          $10
        </span>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`<ProductItem /> check how renders should render everything correctly 1`] = `
<DocumentFragment>
  <a
    data-testid="ProductItem"
  >
    <div
      class="sc-bdfBwQ dXFlzG sc-gsTCUz vzdrx"
      direction="row"
      spacing="3"
      width="100%"
      wrap="nowrap"
    >
      <div
        class="sc-bdfBwQ gEWXUp sc-hKgILt iGwkBA"
        data-testid="ProductThumbnail"
        direction="row"
        height="15"
        spacing=""
        width="13"
        wrap="nowrap"
      >
        <img
          alt="product1"
          data-testid="ProductThumbnail-img"
          src="http://192.168.1.109:4000/products/p1/photo"
        />
      </div>
      <div
        class="sc-bdfBwQ jPnCyv"
        direction="column"
        spacing=""
        width="100%"
        wrap="nowrap"
      >
        <span
          class="sc-dlfnbm LDMTW"
          color=""
          display="inline-block"
          overflow="visible"
          size="3"
          spacing="0px"
          transform=""
        >
          product1
        </span>
        <span
          class="sc-dlfnbm iDQpJo"
          color=""
          data-testid="ProductItem-condition"
          display="inline-block"
          overflow="visible"
          size="1"
          spacing="0px"
          transform=""
        >
          <span
            class="sc-dlfnbm fMxJtk"
            color="#777"
            display="inline-block"
            overflow="visible"
            spacing="0px"
            transform=""
          >
            Condition:
          </span>
           New
        </span>
        <span
          class="sc-dlfnbm cQEZxx"
          color=""
          data-testid="ProductItem-price"
          display="inline-block"
          overflow="visible"
          size="5"
          spacing="0px"
          transform=""
        >
          $10.60
        </span>
        <div
          class="buyer-quantity-box"
          data-testid="ProductItem-buyer-quantity"
        >
          <span
            class="sc-dlfnbm dCFNwQ"
            color="#777"
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            2 people bought
          </span>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
